--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^5.0.4",
     "@capacitor/app": "5.0.2",
     "@capacitor/core": "5.0.4",
     "@capacitor/haptics": "5.0.2",
+    "@capacitor/ios": "^5.0.4",
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/react": "^7.0.0",
-    "@ionic/react-router": "^7.0.0",
+    "@ionic/react-router": "^7.0.10",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
